# SoftServeITATasks

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  task1.cpp  task2.cpp
AnyType/: AnyType.pro  anytype.cpp  anytype.h  main.cpp  typeid.h
AnyType/Project_2/: AnyType.cpp  AnyType.h  DataStructures.h  Source.cpp
CppFileAnalyzer/: cppfileanalyzer.cpp  cppfileanalyzer.h  directorybrowser.cpp  directorybrowser.h  main.cpp  threadspool.cpp  threadspool.h
FilesLinesCounter/FilesLinesCounter/: CodeFile.h  FilesFirectory.h  Source.cpp  StringParse.h
LinesCounter/LinesCounter/: CodeFile.cpp  CodeFile.h  FilesDirectory.cpp  FilesDirectory.h  PathesQueue.cpp  PathesQueue.h  Result.txt  ResultCodeFileQueue.cpp  ResultCodeFileQueue.h  StringParse.cpp  StringParse.h  ThreadWork.cpp  ThreadWork.h  main.cpp
MatsaRomanTask3/: counter.cpp  counter.h  main.cpp
MyVar/: MyVar.sln
MyVar/MyVar/: Var.cpp  Var.h  main.cpp
StringList/: README by Volodya.txt  StringList.cpp  StringList.h  StringList.pro  helperFunctions.cpp  helperFunctions.h  main.cpp
StringList/Proj1_2.0/: Source.cpp  StringList.cpp  StringList.h  node.h
Task#1/: main.c.c  main.cpp
Task#2/: AnyType.cpp  AnyType.h  main.cpp
Task#3/: Threads.pro  filestat.cpp  filestat.h  main.cpp
files/: files.sln
files/files/: Myfile.cpp  Myfile.h  directory.cpp  directory.h  main.cpp
string_list/: string_list.sln
string_list/string_list/: main.cpp  string_list.cpp  string_list.h
task1Daniv/: main.cpp  stringlist.cpp  stringlist.h
task2Daniv/: anytype.cpp  anytype.h  badcast.h  main.cpp  softserveTask2.pro  typesinfo.h
task3Daniv/: SourceCode.cpp  codeanalyzer.cpp  codeanalyzer.h  main.cpp  softserveTask3.pro  threadpool.h
task_2/: main.cpp
task_3/: Makefile  counter.cpp  counter.h  main.cpp
tasksCode/: AnyType.hpp  Body.cpp  CountCodeLines.cpp  StringList.cpp
